# devtools-course-practice

modules/ciesars_code/: CMakeLists.txt  CTestTests.txt  Decrypt.txt  Encrypt.txt
modules/ciesars_code/application/: application.cpp
modules/ciesars_code/include/: ciesars_code.h  ciesars_code_application.h
modules/ciesars_code/src/: ciesars_code.cpp  ciesars_code_application.cpp
modules/ciesars_code/test/: test_ciesars_code.cpp  test_ciesars_code_application.cpp
modules/d-heap/: CTestTests.txt
modules/d-heap/application/: d-heap.cpp
modules/d-heap/include/: d-heap-sort.h  d-heap.h
modules/d-heap/src/: d-heap-sort.cpp  d-heap.cpp
modules/d-heap/test/: test_d_heap.cpp  test_d_heap_application.cpp
modules/deposit-calculator/: CMakeLists.txt  CTestTests.txt
modules/deposit-calculator/application/: DepositCalc_app.cpp
modules/deposit-calculator/include/: DepositCalc.h  DepositCalc_app.h
modules/deposit-calculator/src/: DepositCalc.cpp  DepositCalc_app.cpp
modules/deposit-calculator/test/: test_deposit_calc.cpp  test_deposit_calc_app.cpp
modules/distance-between-vectors/: CTestTests.txt  README.md
modules/distance-between-vectors/application/: distance_between_vectors.cpp
modules/fraction/: CTestTests.txt  README.md
modules/hashmap/: CTestTests.txt  README.md
modules/matrix-operations/: CTestTests.txt
modules/money-converter/: CTestTests.txt
modules/mortgage-calculator/: CMakeLists.txt  README.md
modules/odd_even_batcher_merge/: CTestTests.txt  README.md
modules/quick-sort/: CMakeLists.txt
modules/trees/: CTestTests.txt
(+61 files in other folders)
